--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="/css/style.css"> -->
     <title>Coder House - Web Dev</title>
+        <!-- Metas -->
+        <title>BG Interiores Home Deco & Diseño</title>
+        <meta name="title" content="BG Interiores - Home Deco & Diseño">
+        <meta name="description" content="Somos la Tienda Online del mejor Bazar Boutique de la Patagonia. Vasos y copas, , muebles de Diseño, cubiertos, tazones y vajilla. ¡Renova tu hogar con nosotros!">
+        <meta name="keywords" content="home, casa, articulos decoracion, muebles, cocina, vajilla, cubiertos, tienda online, boutique, bazar, Diseño de muebles">
+        <meta name="author" content="BG Interiores">
+        <meta name="copyright" content="Propietrio del copyright">
+        <meta name="ROBOTS" content="INDEX, FOLLOW">
+        <meta name="ROBOTS" content="ALL">
+        <meta name="language" content="spanish">
+        <meta http-equiv="Content-Language" content="Es">
+        <meta name="distribution" content="Global">
+        <meta name="city" content="Comodoro Rivadavia">
+        <meta name="country" content="Argentina">  
+        <meta name="doc-type" content="Web Page">
+        <meta name="revisit-after" content="7 Days">
+        <!-- Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://www.bginteriores.com.ar/">
+        <meta property="og:title" content="BG Interiores - Home Deco & Diseño">
+        <meta property="og:description" content="Somos la Tienda Online del mejor Bazar Boutique de la Patagonia. Vasos y copas, , muebles de Diseño, cubiertos, tazones y vajilla. ¡Renova tu hogar con nosotros!">
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://www.bginteriores.com.ar/">
+        <meta property="twitter:title" content="BG Interiores - Home Deco & Diseño">
+        <meta property="twitter:description" content="Somos la Tienda Online del mejor Bazar Boutique de la Patagonia. Vasos y copas, , muebles de Diseño, cubiertos, tazones y vajilla. ¡Renova tu hogar con nosotros!">
+        <!-- Fin de Metas -->
 </head>
 <body>
     <!-- Navbar -->
